// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressCircular Renders correctly with defaults 1`] = `
<div
  className="MuiCircularProgress-root brew-ProgressCircular--variant-indeterminate brew-ProgressCircular--color-primary brew-ProgressCircular--size-inherit MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
  role="progressbar"
  style={
    Object {
      "height": 40,
      "width": 40,
    }
  }
>
  <svg
    className="MuiCircularProgress-svg"
    viewBox="22 22 44 44"
  >
    <circle
      className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
      cx={44}
      cy={44}
      fill="none"
      r={20}
      strokeWidth={4}
      style={Object {}}
    />
  </svg>
</div>
`;

exports[`ProgressCircular Renders correctly with property variants 1`] = `
Array [
  <div
    className="MuiCircularProgress-root brew-ProgressCircular--variant-indeterminate brew-ProgressCircular--color-primary brew-ProgressCircular--size-small MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx={44}
        cy={44}
        fill="none"
        r={20}
        strokeWidth={4}
        style={Object {}}
      />
    </svg>
  </div>,
  <div
    aria-valuenow={5}
    className="MuiCircularProgress-root brew-ProgressCircular--variant-determinate brew-ProgressCircular--color-secondary brew-ProgressCircular--size-medium MuiCircularProgress-colorPrimary"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "transform": "rotate(53.823deg)",
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle"
        cx={44}
        cy={44}
        fill="none"
        r={20}
        strokeWidth={4}
        style={
          Object {
            "strokeDasharray": "125.664",
            "strokeDashoffset": "113.411px",
          }
        }
      />
    </svg>
  </div>,
  <div
    aria-valuenow={0}
    className="MuiCircularProgress-root brew-ProgressCircular--variant-static brew-ProgressCircular--color-tertiary brew-ProgressCircular--size-large MuiCircularProgress-colorPrimary MuiCircularProgress-static"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "transform": "rotate(-90deg)",
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleStatic"
        cx={44}
        cy={44}
        fill="none"
        r={20}
        strokeWidth={4}
        style={
          Object {
            "strokeDasharray": "125.664",
            "strokeDashoffset": "125.664px",
          }
        }
      />
    </svg>
  </div>,
  <div
    className="MuiCircularProgress-root brew-ProgressCircular--variant-indeterminate brew-ProgressCircular--color-success brew-ProgressCircular--size-inherit MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx={44}
        cy={44}
        fill="none"
        r={20}
        strokeWidth={4}
        style={Object {}}
      />
    </svg>
  </div>,
  <div
    className="MuiCircularProgress-root brew-ProgressCircular--variant-indeterminate brew-ProgressCircular--color-danger brew-ProgressCircular--size-inherit MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx={44}
        cy={44}
        fill="none"
        r={20}
        strokeWidth={4}
        style={Object {}}
      />
    </svg>
  </div>,
  <div
    className="MuiCircularProgress-root brew-ProgressCircular--variant-indeterminate brew-ProgressCircular--color-warning brew-ProgressCircular--size-inherit MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx={44}
        cy={44}
        fill="none"
        r={20}
        strokeWidth={4}
        style={Object {}}
      />
    </svg>
  </div>,
  <div
    className="MuiCircularProgress-root brew-ProgressCircular--variant-indeterminate brew-ProgressCircular--color-info brew-ProgressCircular--size-inherit MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx={44}
        cy={44}
        fill="none"
        r={20}
        strokeWidth={4}
        style={Object {}}
      />
    </svg>
  </div>,
]
`;
